[gd_scene load_steps=27 format=3 uid="uid://0cy7htlt00s6"]

[ext_resource type="Script" path="res://main.gd" id="1_6m4fr"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="2_p6gav"]
[ext_resource type="Texture2D" uid="uid://cyrlccn34qbgx" path="res://assets/background.png" id="3_ycbwy"]
[ext_resource type="Texture2D" uid="uid://cvaryjoqyns3q" path="res://assets/buttons/start_button_normal.png" id="4_n8sfc"]
[ext_resource type="Texture2D" uid="uid://bb44lytpdej88" path="res://assets/buttons/start_button_pressed.png" id="5_h4sde"]
[ext_resource type="Texture2D" uid="uid://d1omto5uuatjl" path="res://assets/buttons/start_button_hover.png" id="6_5e82i"]
[ext_resource type="Texture2D" uid="uid://dplbbl1hqdkbu" path="res://assets/buttons/online_button_normal.png" id="7_1oran"]
[ext_resource type="Texture2D" uid="uid://brqkxiwo32ngd" path="res://assets/buttons/online_button_pressed.png" id="8_ohdjy"]
[ext_resource type="Texture2D" uid="uid://b8jrjo5gbe4vw" path="res://assets/buttons/online_button_hover.png" id="9_v1wdj"]
[ext_resource type="Texture2D" uid="uid://c0ja4br2myjm1" path="res://assets/buttons/exit_button_normal.png" id="10_p4v6u"]
[ext_resource type="Texture2D" uid="uid://devt8qijam78x" path="res://assets/buttons/exit_button_pressed.png" id="11_yoe3l"]
[ext_resource type="Texture2D" uid="uid://dy5y5l14xceox" path="res://assets/buttons/exit_button_hover.png" id="12_ndsnx"]
[ext_resource type="Shader" path="res://shaders/logo.gdshader" id="13_q5cwt"]
[ext_resource type="Texture2D" uid="uid://vf45l2efh1tj" path="res://assets/logo.png" id="14_0piw8"]
[ext_resource type="Texture2D" uid="uid://4ypfn5fwrx1h" path="res://assets/buttons/right_bumper.png" id="15_edwn3"]
[ext_resource type="Texture2D" uid="uid://cpb5sk2kaehdy" path="res://assets/buttons/right_joystick.png" id="16_kq66e"]
[ext_resource type="Texture2D" uid="uid://cuxo67q5sn3hb" path="res://assets/buttons/left_joystick.png" id="17_lachi"]
[ext_resource type="Texture2D" uid="uid://dd35ma15h25tj" path="res://assets/buttons/connect_button_normal.png" id="18_dsdt1"]
[ext_resource type="Texture2D" uid="uid://c5ydj574dr2xi" path="res://assets/buttons/connect_button_pressed.png" id="19_d265a"]
[ext_resource type="Texture2D" uid="uid://eneiboss2vhr" path="res://assets/buttons/connect_button_hover.png" id="20_h05yv"]
[ext_resource type="Texture2D" uid="uid://bim53of40hkoa" path="res://assets/buttons/host_button_normal.png" id="21_6j64q"]
[ext_resource type="Texture2D" uid="uid://caitci06oqnjv" path="res://assets/buttons/host_button_pressed.png" id="22_es5iq"]
[ext_resource type="Texture2D" uid="uid://cjthd4hwro4ok" path="res://assets/buttons/host_button_hover.png" id="23_haljr"]
[ext_resource type="AudioStream" uid="uid://bm6bcuvl2fmgq" path="res://assets/sfx/button_press.wav" id="24_t417x"]
[ext_resource type="AudioStream" uid="uid://clj6pfdgfrud7" path="res://assets/sfx/button_release.wav" id="25_q671y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kolul"]
shader = ExtResource("13_q5cwt")
shader_parameter/amplitude = 12.0
shader_parameter/speed = 1.0

[node name="main" type="Node"]
script = ExtResource("1_6m4fr")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Testscene.tscn", "res://maps/map_1.tscn")
spawn_path = NodePath("..")

[node name="Container" type="Container" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_p6gav")

[node name="Background" type="TextureRect" parent="Container"]
layout_mode = 2
texture = ExtResource("3_ycbwy")

[node name="HomeMenu" type="MarginContainer" parent="Container"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_right = 80

[node name="HSplitContainer" type="HSplitContainer" parent="Container/HomeMenu"]
layout_mode = 2
collapsed = true
dragger_visibility = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HomeMenu/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HomeMenu/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="StartButton" type="TextureButton" parent="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_n8sfc")
texture_pressed = ExtResource("5_h4sde")
texture_hover = ExtResource("6_5e82i")

[node name="OnlineButton" type="TextureButton" parent="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_1oran")
texture_pressed = ExtResource("8_ohdjy")
texture_hover = ExtResource("9_v1wdj")
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_p4v6u")
texture_pressed = ExtResource("11_yoe3l")
texture_hover = ExtResource("12_ndsnx")

[node name="Label2" type="Label" parent="Container/HomeMenu/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "v0.1
Created for Global Gamejam 2023
Macedonia"

[node name="CenterContainer" type="CenterContainer" parent="Container/HomeMenu/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HomeMenu/HSplitContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="logo" type="TextureRect" parent="Container/HomeMenu/HSplitContainer/CenterContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_kolul")
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
texture = ExtResource("14_0piw8")
stretch_mode = 5

[node name="right_bumper_helper_text" type="TextureRect" parent="Container/HomeMenu/HSplitContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_edwn3")
stretch_mode = 5

[node name="right_joystick_helper_text" type="TextureRect" parent="Container/HomeMenu/HSplitContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("16_kq66e")
stretch_mode = 5

[node name="left_bumper_helper_text" type="TextureRect" parent="Container/HomeMenu/HSplitContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("17_lachi")
stretch_mode = 5

[node name="OnlineMenu" type="MarginContainer" parent="Container"]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="QueueVBox" type="VBoxContainer" parent="Container/OnlineMenu"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Container/OnlineMenu/QueueVBox"]
custom_minimum_size = Vector2(500, 64)
layout_mode = 2
placeholder_text = "127.0.0.1"
context_menu_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="Container/OnlineMenu/QueueVBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Container/OnlineMenu/QueueVBox/CenterContainer"]
layout_mode = 2

[node name="ConnectButton" type="TextureButton" parent="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("18_dsdt1")
texture_pressed = ExtResource("19_d265a")
texture_hover = ExtResource("20_h05yv")

[node name="HostButton" type="TextureButton" parent="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("21_6j64q")
texture_pressed = ExtResource("22_es5iq")
texture_hover = ExtResource("23_haljr")

[node name="MultiplayerVBox" type="VBoxContainer" parent="Container/OnlineMenu/QueueVBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container/OnlineMenu/QueueVBox/MultiplayerVBox"]
layout_mode = 2

[node name="ButtonDownSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_t417x")

[node name="ButtonUpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_q671y")

[connection signal="button_down" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/StartButton" to="Container" method="_on_button_down"]
[connection signal="button_up" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/StartButton" to="Container" method="_on_button_up"]
[connection signal="pressed" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/StartButton" to="Container" method="_on_start_button_pressed"]
[connection signal="button_down" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/OnlineButton" to="Container" method="_on_button_down"]
[connection signal="button_up" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/OnlineButton" to="Container" method="_on_button_up"]
[connection signal="pressed" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/OnlineButton" to="Container" method="_on_online_button_pressed"]
[connection signal="button_down" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/ExitButton" to="Container" method="_on_button_down"]
[connection signal="button_up" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/ExitButton" to="Container" method="_on_button_up"]
[connection signal="pressed" from="Container/HomeMenu/HSplitContainer/VBoxContainer/VBoxContainer/ExitButton" to="Container" method="_on_exit_button_pressed"]
[connection signal="button_down" from="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer/ConnectButton" to="Container" method="_on_button_down"]
[connection signal="button_up" from="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer/ConnectButton" to="Container" method="_on_button_up"]
[connection signal="pressed" from="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer/ConnectButton" to="Container" method="_on_connect_button_pressed"]
[connection signal="button_down" from="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer/HostButton" to="Container" method="_on_button_down"]
[connection signal="button_up" from="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer/HostButton" to="Container" method="_on_button_up"]
[connection signal="pressed" from="Container/OnlineMenu/QueueVBox/CenterContainer/HBoxContainer/HostButton" to="Container" method="_on_host_button_pressed"]
